--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cloudstickyportable by tsuyoshicho</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="CloudStickyPortable : Setup Environment for  CloudSticky (old name Evernote Sticky) Portable (PortableApps.com style)" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>CloudStickyPortable</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Cloudstickyportable</h1>
-        <p>Setup Environment for  CloudSticky (old name Evernote Sticky) Portable (PortableApps.com style)</p>
 
-        <p class="view"><a href="https://github.com/tsuyoshicho/CloudStickyPortable">View the Project on GitHub <small>tsuyoshicho/CloudStickyPortable</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/tsuyoshicho/CloudStickyPortable">View on GitHub</a>
 
+          <h1 id="project_title">CloudStickyPortable</h1>
+          <h2 id="project_tagline">Setup Environment for  CloudSticky (old name Evernote Sticky) Portable (PortableApps.com style)</h2>
 
-        <ul>
-          <li><a href="https://github.com/tsuyoshicho/CloudStickyPortable/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/tsuyoshicho/CloudStickyPortable/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/tsuyoshicho/CloudStickyPortable">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/tsuyoshicho/CloudStickyPortable/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/tsuyoshicho/CloudStickyPortable/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="cloudsticky-old-evernotestickyportable" class="anchor" href="#cloudsticky-old-evernotestickyportable"><span class="octicon octicon-link"></span></a>CloudSticky (old EvernoteStickyPortable)</h1>
 
@@ -120,12 +123,17 @@ Licence：　CC Attribution-NonCommercial-ShareAlike 3.0
 
 <p>短縮URL <a href="http://goo.gl/qjmYx">http://goo.gl/qjmYx</a> ( <a href="https://drive.google.com/folderview?id=0B0YTfSPDI7f6VUxfS25TZWFVYTQ&amp;usp=sharing">https://drive.google.com/folderview?id=0B0YTfSPDI7f6VUxfS25TZWFVYTQ&amp;usp=sharing</a> )</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/tsuyoshicho">tsuyoshicho</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">CloudStickyPortable maintained by <a href="https://github.com/tsuyoshicho">tsuyoshicho</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
